# webtoon_rag

./: confirm_data.ipynb  .gitignore  README.md  Untitled.ipynb  [작업중]all_gpt_v1.5.ipynb  [작업중]all_gpt_v2.4.ipynb  all_gpt.ipynb  all_gpt.py  all_gpt_idiom.py  all_gpt_v0.1.ipynb  all_gpt_v0.2.ipynb  all_gpt_v0.3.ipynb  all_gpt_v0.4.ipynb  all_gpt_v1.0.ipynb  all_gpt_v1.1.ipynb  all_gpt_v1.2.ipynb  all_gpt_v1.3.ipynb  all_gpt_v1.4.ipynb  all_gpt_v2.0.ipynb  all_gpt_v2.1.ipynb  all_gpt_v2.2.ipynb  all_gpt_v2.3.ipynb  cal_bleu.ipynb  cmd.txt  ds_config.json  idiom_rag_v0.2.ipynb  idiom_rag_v1.0.ipynb  infer_chatgpt.ipynb  llama_plus_gpt.ipynb  pyproject.toml  review_llama_result.py  run_vllm.py  run_vllm_idiom.py  sglang.ipynb  test.py  test.tsv  test2.tsv  test_llama.ipynb  test_llama.py  test_llama4.ipynb  (+8 more)
data/: evaluate.ipynb  en_only.tsv  evaluate.xlsx  evaluate_v2.xlsx  generate_idiom.py  idiom_dict.txt  sample.tsv  sfx.tsv  sfx.xlsx  sfx_dict.txt  네버개_65_candidate2.csv  네버개_65_candidate_1.csv  네버개_66_candidate2.csv  네버개_66_candidate_1.csv  네버개_67_candidate2.csv  네버개_67_candidate_1.csv  네버개_68_candidate2.csv  네버개_68_candidate_1.csv
melon/: bun-2@KAKAO.HADOOP.keytab  confirm_data.ipynb
pipeline/: train_pipeline.py  train_sub.py
rag/: search_idiom.ipynb  search_idiom_cos.ipynb  search_idiom_l2.ipynb  search_idiom_l2_2.ipynb  search_idiom_l2_repeat.ipynb  search_idiom_l2_test.ipynb  idiom_rag.ipynb  idiom_rag_v0.2.ipynb  idiom_rag_v1.1.ipynb  translate_rag.ipynb
test/: read_bucket.py  script.py  test_llama_complete.ipynb  test_llama_vllm.ipynb  (+2 more)
(+10422 files in other folders)
