[project]
name = "poetry-env"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ipykernel (>=6.29.5,<7.0.0)",
    "cowsay (>=6.1,<7.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "fsspec (>=2023.12.0,<=2024.0.0)",
    "gcsfs (>=2023.12.0,<=2024.0.0)",
    "google-cloud-aiplatform (>=1.80.0,<2.0.0)",
    "accelerate (>=1.3.0,<2.0.0)",
    "kfp (>=2.6.0,<2.11.0)",
    "google-cloud-pipeline-components (>=2.19.0,<3.0.0)",
    "datasets (>=3.3.1,<4.0.0)",
    "transformers (>=4.49.0,<5.0.0)",
    "bitsandbytes (>=0.45.2,<0.46.0)",
    "peft (>=0.14.0,<0.15.0)",
    "google (>=3.0.0,<4.0.0)",
    "openai (>=1.63.2,<2.0.0)",
    "matplotlib (>=3.10.0,<4.0.0)",
    "argparse (>=1.4.0,<2.0.0)",
    "jupyterlab (>=4.3.5,<5.0.0)"
]

[tool.poetry]
packages = [{include = "poetry_env", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
